--- a/public/views/reports.html
+++ b/public/views/reports.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark" id="navigation">
       <div class="container-fluid">
         <a href="/homePage">
-            <img src="/views/euro.png" width="30px" height="30px" id="png" />
+            <img src="/views/logo.png" width="30px" height="30px" id="png" />
         </a>
         <a class="navbar-brand" href="/homePage">Expense Tracker</a>
         <button
