--- a/public/css/forgotPassword.css
+++ b/public/css/forgotPassword.css
@@ -1,56 +1,18 @@
-/* Add the following CSS code to your "/css/forgotPassword.css" file */
+.form-gap {
+  padding-top: 70px;
+}
 
-/* Reset Password panel */
-.panel.resetPassword {
-    margin-top: 100px;
-    border-color: #ccc;
-  }
-  
-  /* Reset Password form */
-  .form.resetPassword {
-    padding: 30px;
-  }
-  
-  /* Reset Password icon */
-  .fa.fa-lock.fa-4x.resetPassword {
-    color: #f39c12;
-  }
-  
-  /* Reset Password heading */
-  h2.text-center.resetPassword {
-    margin-top: 10px;
-    font-size: 24px;
-  }
-  
-  /* Reset Password input fields */
-  .form-group.resetPassword {
-    margin-bottom: 20px;
-  }
-  
-  .input-group.resetPassword {
-    position: relative;
-    display: flex;
-  }
-  
-  .input-group-addon.resetPassword {
-    background-color: #f39c12;
-    border-color: #f39c12;
-    color: #fff;
-  }
-  
-  .form-control.resetPassword {
-    height: 45px;
-  }
-  
-  /* Reset Password button */
-  #resetPasswordLinkBtn {
-    background-color: #f39c12;
-    border-color: #f39c12;
-    color: #fff;
-  }
-  
-  #resetPasswordLinkBtn:hover {
-    background-color: #e68a00;
-    border-color: #e68a00;
-  }
-  
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background: #effeff;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  flex-direction: column;
+  font-family: "Montserrat", sans-serif;
+  height: 100vh;
+  margin: -20px 0 50px;
+}
